# AlgorithmAnalysisHomework

Lab1Hammurabi/: CMakeLists.txt  Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  Lab1Hammurabi.cpp  MessagePrinter.cpp  MessagePrinter.h  UserInputManager.cpp  UserInputManager.h
Lab1Hammurabi/Code/: Game.cpp  Game.h  GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  Lab1Hammurabi.cpp
Lab1Hammurabi/Code/Data/: GameConfig.cpp  GameConfig.h  GameData.cpp  GameData.h  PersistentGameData.h  ResourcesPaths.h  SaveManager.cpp  SaveManager.h
Lab1Hammurabi/Code/DataStructures/: IntRange.cpp  IntRange.h  NumberRange.cpp  NumberRange.h  RoundInput.cpp  RoundInput.h
Lab1Hammurabi/Code/IO/: MessagePrinter.cpp  MessagePrinter.h  UserInputManager.cpp  UserInputManager.h
Lab1Hammurabi/Code/Utils/: Random.cpp  Random.h
Lab1Hammurabi/data/: gameConfig.txt
Lab1Hammurabi/res/: gameConfig.txt
Lab2DynamicArray/: Array.h  CMakeLists.txt  main.cpp  playground_main.cpp
Lab2DynamicArray/ArrayTests/: array_tests.cpp
Lab3QuickSort/: CMakeLists.txt  main.cpp  sort.h
Lab3QuickSort/SortTests/: sort_tests.cpp
Lab4MemoryAllocator/: CMakeLists.txt  main.cpp
Lab4MemoryAllocator/MemoryAllocator/: CommonBlockMetaData.cpp  CommonBlockMetaData.h  IMemoryPage.h  MemoryAllocator.cpp  MemoryAllocator.h  MemoryAllocatorConstants.h  OccupiedBlock.h
Lab4MemoryAllocator/MemoryAllocator/CoalesceAllocator/: CoalesceAllocator.cpp  CoalesceAllocator.h  CoalesceBlockMetaData.h  CoalescePage.cpp  CoalescePage.h
Lab4MemoryAllocator/MemoryAllocator/FSA/: FSA.cpp  FSA.h  FSABlockMetaData.h  FSAConstants.h  FSAPage.cpp  FSAPage.h
